--- a/Lessons/les10/css/main.css
+++ b/Lessons/les10/css/main.css
@@ -80,14 +80,14 @@
 	font-size: 14px;
 	color: black;
     text-decoration: underline;
-     position: absolute;  
-  top: 30%;
-  left: 0;
+   
+    position: absolute;  
+  top: 1.7em;
+  left: 1.6em;
   bottom: 0;
   right: 0;
-  
-  max-width: 100%;
-  max-height: 100%;
+  align:center;
+ 
 
 
 }
