--- a/Lessons/les10/css/main.css
+++ b/Lessons/les10/css/main.css
@@ -22,7 +22,7 @@
 .navhead {
   min-height: 155px;
   background-color: #f8c04a;
-  background: linear-gradient(to bottom, #f8c04a, #CEAD78);
+  background: linear-gradient(to bottom, #f8c04a, #f4a125);
 }
 .logo {
   margin-top: 33px;
