--- a/Lessons/les10/css/main.css
+++ b/Lessons/les10/css/main.css
@@ -36,8 +36,8 @@
   text-align: center;
   line-height: 45px;
   font-size: 25px;
-  font-weight: 500;
-  text-shadow:  1px 1px 2px black;
+  font-weight: 600;
+  color: #505050;
 
  
 }
