--- a/Lessons/lesson_13/css/style.css
+++ b/Lessons/lesson_13/css/style.css
@@ -2,8 +2,8 @@ body {
 
 	
 	
-	width: 100%;
-	height: 100%;
+	width: 570px auto;
+	
 	font-family: arial;
 	background-image: url(../img/bg.jpg);
 }
