--- a/Lessons/lesson_14/css/style.css
+++ b/Lessons/lesson_14/css/style.css
@@ -51,12 +51,12 @@ small {
 
 }
 
-.Lato {
+.lato {
      font-family: 'Lato';
     font-weight: 300;
     font-style: normal;
-
 }
+
 
 .lobster {
 	font-family: 'Lobster', cursive;
